see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Sep-2010 Jean-Marie Simonet
 # [#21762] Menu module displaying levels incorrectly. Thanks Bill.
 $ Updated xx-XX.ini admin.
 # [#21295] No articles in this category below of sub-category list. Thanks Bill.
 
12-Sep-2010 Sam Moffatt
 # [#22381] Sample missing banner white.png
 - Removed OpenID support

11-Sep-2010 Jean-Marie Simonet
 $ [#22383] Patch: Language file corrections, minor typos. Thanks Ole.
 ^ Correcting double semi-colons in css files
 
10-Sep-2010 Ian MacLennan
 # [#22086] Inconsistency with files installer return type
 # [#22301] Adding new group has a notice message, not a normal message
 # [#22352] Module cache calls - PHP 5.3.x warnings
 # [#22376] Undefined $canEdit in Hathor Categories view
 # [#22375] Use uncompressed version of calendar.js when debug is turned on
 # [#21133] Voting Plugin - missing token and needs parameters and logic in Views
 # [#21965] Ordering values not set properly with creation of new article
 # [#22174] Inconsistent behaviour of Article and Category Manager with regard to Permissions table

10-Sep-2010 Jean-Marie Simonet
 # [#22334] Recent articles featured. Thanks Amy.
 $ [#22357] Patch: Step 5 FTP - Header text too wide. Thanks Ole.
 # [#22350] Banner Manager order TABS inconsistency.
 # [#22303] components - css - class and id corrections. Thanks Bill and Angie.
 $ [#22359] com content - blog - readmore - wrong string. Thanks Bill.

09-Sep-2010 Jean-Marie Simonet
 # [#22319] American english spelling in en-GB language files. Thanks Bill.
 # [#22320] <br> <br/> <br />. Thanks Amy and Bill.