@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+13-Sep-2010 Jean-Marie Simonet
+ # [#22361] archive articles - pagination. Thanks Bill.
+
 12-Sep-2010 Jean-Marie Simonet
  # [#21762] Menu module displaying levels incorrectly. Thanks Bill.
  $ Updated xx-XX.ini admin.
